# diffqcqp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  pybindings.cpp  qcqp.py  qcqp_no_batch.py  setup.py  test_script.py
pydiffqcqp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
qcqplib/: CMakeLists.txt  Solver.cpp  Solver.hpp
